new examples + new fixes

--- a/practice_3/practice_3.ipynb
+++ b/practice_3/practice_3.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Second tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From official template. "
+    "# Leg mechanism"
    ]
   }
  ],
