--- a/practice_1/step_2_basic_stuff.ipynb
+++ b/practice_1/step_2_basic_stuff.ipynb
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by loading needed libraries "
+    "As always first we need to upload all needed libraries. Here we are going to use mujoco and mujoco-python-viewer. You can use the default viewer that I used in the previous example, but I like the custom one. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,23 +42,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us upload some MJCF model and create the MuJoCo model entity"
+    "Here I have created some weird model written in MJCF and saved as xml file. Since I did not save it as a separate file, we are using `from_xml_string` method to create MuJoCo model entity. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "xml = \"\"\"\n",
     "<mujoco>\n",
     "  <worldbody>\n",
-    "    <geom name=\"red_box\" type=\"box\" size=\".2 .2 .2\" rgba=\"1 0 0 1\"/>\n",
-    "    <geom name=\"green_sphere\" pos=\".2 .2 .2\" size=\".1\" rgba=\"0 1 0 1\"/>\n",
+    "    <light name=\"top\" pos=\"0 0 1\"/>\n",
+    "    <body name=\"box_and_sphere\" euler=\"0 0 -30\">\n",
+    "      <joint name=\"swing\" type=\"hinge\" axis=\"1 -1 0\" pos=\"-.2 -.2 -.2\"/>\n",
+    "      <geom name=\"red_box\" type=\"box\" size=\".2 .2 .2\" rgba=\"1 0 0 1\"/>\n",
+    "      <geom name=\"green_sphere\" pos=\".2 .2 .2\" size=\".1\" rgba=\"0 1 0 1\"/>\n",
+    "      <geom name=\"blue_cylinder\" type=\"cylinder\" pos=\"0.1 -0.2 0.0\" size=\"0.1 0.2\" rgba=\"0 0 1 1\"/>\n",
+    "    </body>\n",
     "  </worldbody>\n",
     "</mujoco>\n",
     "\"\"\"\n",
+    "\n",
     "model = mujoco.MjModel.from_xml_string(xml)"
    ]
   },
@@ -89,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[1., 0., 0., 1.],\n",
-       "       [0., 1., 0., 1.]], dtype=float32)"
+       "       [0., 1., 0., 1.],\n",
+       "       [0., 0., 1., 1.]], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Invalid name ''. Valid names: ['green_sphere', 'red_box']\"\n"
+      "\"Invalid name ''. Valid names: ['blue_cylinder', 'green_sphere', 'red_box']\"\n"
      ]
     }
    ],
@@ -166,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<_MjModelGeomViews\n",
-       "  bodyid: array([0], dtype=int32)\n",
+       "  bodyid: array([1], dtype=int32)\n",
        "  conaffinity: array([1], dtype=int32)\n",
        "  condim: array([3], dtype=int32)\n",
        "  contype: array([1], dtype=int32)\n",
@@ -200,7 +207,7 @@
        ">"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +234,7 @@
        "array([0., 1., 0., 1.], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +261,7 @@
        "array([0., 1., 0., 1.], dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -303,22 +310,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['red_box', 'green_sphere']"
+       "['red_box', 'green_sphere', 'blue_cylinder']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[model.geom(i).name for i in range(model.ngeom)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The number of geoms is 3. Geom colors are [[1. 0. 0. 1.]\n",
+      " [0. 1. 0. 1.]\n",
+      " [0. 0. 1. 1.]]\n",
+      "[0.2 0.2 0.2]\n",
+      "\n",
+      "ID of the red_box is 0\n",
+      "Name of the object with ID=1 is green_sphere\n",
+      "Name of the object with ID=0 is red_box\n",
+      "Pos of the object with ID=0 is [0. 0. 0.]\n",
+      "Quat of the object with ID=0 is [1. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nThe number of geoms is {model.ngeom}. Geom colors are {model.geom_rgba}\")\n",
+    "print(model.geom(\"green_sphere\").pos)\n",
+    "\n",
+    "id_1 = mujoco.mj_name2id(model, mujoco.mjtObj.mjOBJ_GEOM, 'green_sphere')\n",
+    "id_2 = model.geom('red_box').id\n",
+    "id_2_2 = mujoco.mj_name2id(model, mujoco.mjtObj.mjOBJ_GEOM, 'red_box')\n",
+    "print(f\"\\nID of the red_box is {id_2}\")\n",
+    "print(f\"Name of the object with ID={id_1} is {model.geom(id_1).name}\")\n",
+    "print(f\"Name of the object with ID={id_2} is {model.geom(id_2).name}\")\n",
+    "print(f\"Pos of the object with ID={id_2} is {model.geom(id_2).pos}\")\n",
+    "print(f\"Quat of the object with ID={id_2_2} is {model.geom(id_2_2).quat}\")"
    ]
   },
   {
@@ -331,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,17 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -383,11 +428,12 @@
      "output_type": "stream",
      "text": [
       "raw access:\n",
-      " [[0.  0.  0. ]\n",
-      " [0.2 0.2 0.2]]\n",
+      " [[ 0.          0.          0.        ]\n",
+      " [ 0.27320508  0.07320508  0.2       ]\n",
+      " [-0.01339746 -0.22320508  0.        ]]\n",
       "\n",
       "named access:\n",
-      " [0.2 0.2 0.2]\n"
+      " [0.27320508 0.07320508 0.2       ]\n"
      ]
     }
    ],
@@ -397,6 +443,68 @@
     "\n",
     "# MjData also supports named access:\n",
     "print('\\nnamed access:\\n', data.geom('green_sphere').xpos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Time is 0.0\n",
+      "Pos of all geoms is [[ 0.          0.          0.        ]\n",
+      " [ 0.27320508  0.07320508  0.2       ]\n",
+      " [-0.01339746 -0.22320508  0.        ]]\n",
+      "q_pos of all geoms is [0.]\n",
+      "q_vel of all geoms is [0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nTime is {data.time}\")\n",
+    "print(f\"Pos of all geoms is {data.geom_xpos}\")\n",
+    "print(f\"q_pos of all geoms is {data.qpos}\")\n",
+    "print(f\"q_vel of all geoms is {data.qvel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Options\n",
+    "\n",
+    "Few code lines to show how you can operate on options. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timestep is 0.002\n",
+      "Gravity is [0.   0.   9.81]\n",
+      "Total number of DoFs in the model: 1\n",
+      "Generalized positions: [0.]\n",
+      "Generalized velocities: [0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.opt.gravity = [0, 0, 9.81]\n",
+    "print(f\"Timestep is {model.opt.timestep}\")\n",
+    "print(f\"Gravity is {model.opt.gravity}\")\n",
+    "\n",
+    "print('Total number of DoFs in the model:', model.nv)\n",
+    "print('Generalized positions:', data.qpos)\n",
+    "print('Generalized velocities:', data.qvel)"
    ]
   },
   {
@@ -412,24 +520,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xml = \"\"\"\n",
-    "<mujoco>\n",
-    "  <worldbody>\n",
-    "    <light name=\"top\" pos=\"0 0 1\"/>\n",
-    "    <geom name=\"red_box\" type=\"box\" size=\".2 .2 .2\" rgba=\"1 0 0 1\"/>\n",
-    "    <geom name=\"green_sphere\" pos=\".2 .2 .2\" size=\".1\" rgba=\"0 1 0 1\"/>\n",
-    "  </worldbody>\n",
-    "</mujoco>\n",
-    "\"\"\"\n",
-    "#\n",
-    "# Make model and data\n",
-    "model = mujoco.MjModel.from_xml_string(xml)\n",
-    "data = mujoco.MjData(model)\n",
-    "\n",
     "viewer = mujoco_viewer.MujocoViewer(model, data, title=\"tutorial\", width=1920, height=1080)\n",
     "while viewer.is_alive:\n",
     "    mujoco.mj_step(model, data)\n",
