--- a/practice_2/step_1/step_1_step_signal.ipynb
+++ b/practice_2/step_1/step_1_step_signal.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Practice 2\n",
-    "\n"
+    "# Set pos for a 2R robot\n",
+    "\n",
+    "In the previous practice we dealt with passive structures. Let's dive into our workout routine with active systems. For the sake of simplicity, within this script we deal with step signal as a reference. "
    ]
   },
   {
@@ -31,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Constant variables such as simulation time, step numbers, model name, and MuJoCo entities: model and data"
+    "Let us declare constant variables such as simulation time `SIMEND`, step numbers `STEP_NUM`, name of  xml file `MODEL_NAME`, and MuJoCo entities: `model` and `data`"
    ]
   },
   {
@@ -56,14 +57,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us make servo control. \n",
+    "Our first activity will involve implementing position-velocity control for the servo, followed by advancing to torque control. \n",
     "\n",
-    "Take a look at container `actuator` at xml of the model. The the first actuator (id is 0) is a motor, which means it is torque controlled. "
+    "To understand the next piece of code you need to open the xml file and to take a look at `actuator` container. You'll see there a few actuators: (0) `motor`, (1) `position`, (2) velocity for the joint A, and (3) `motor`, (4) `position`, (5) `velocity` for the joint B. To implement servo control we need only position and velocity types, i.e., actuators with IDs 1 and 2 for the joint A, and with IDs 4 and 5 for the joint B. Ids 0 and 3 are needed for torque control."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,28 +78,32 @@
     "    mjmodel.actuator_biasprm[actuator_no, 2] = -kv\n",
     "\n",
     "\n",
-    "def controller(mjmodel, mjdata):\n",
+    "def controller(mjmodel, mjdata, q_A: float, q_B: float):\n",
     "\n",
-    "    # position control; position/velocity servo\n",
-    "    set_position_servo(mjmodel, 1, 100)\n",
-    "    set_velocity_servo(mjmodel, 2, 10)\n",
-    "    mjdata.ctrl[1] = np.pi/4  # position\n",
+    "    ID_POS_A = 1\n",
+    "    ID_VEL_A = 2\n",
+    "    ID_POS_B = 4\n",
+    "    ID_VEL_B = 5\n",
     "\n",
-    "    set_position_servo(mjmodel, 4, 100)\n",
-    "    set_velocity_servo(mjmodel, 5, 10)\n",
-    "    mjdata.ctrl[4] = np.pi/2  # position"
+    "    set_position_servo(mjmodel, ID_POS_A, 100)\n",
+    "    set_velocity_servo(mjmodel, ID_VEL_A, 10)\n",
+    "    mjdata.ctrl[ID_POS_A] = q_A\n",
+    "\n",
+    "    set_position_servo(mjmodel, ID_POS_B, 40)\n",
+    "    set_velocity_servo(mjmodel, ID_VEL_B, 10)\n",
+    "    mjdata.ctrl[ID_POS_B] = q_B"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Viewer and simulation"
+    "At this stage we have to create a viewer entity, set control callback, and write a piece of code for the `mj_step` command"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +112,14 @@
     "                                    width=1920,\n",
     "                                    height=1080)\n",
     "\n",
-    "mujoco.set_mjcb_control(controller)\n",
+    "\n",
     "\n",
     "for i in range(STEP_NUM):\n",
     "    if viewer.is_alive:\n",
     "        time_prev = data.time\n",
     "        while (data.time - time_prev < 1.0/60.0):\n",
-    "            mujoco.mj_step(model, data)\n",
+    "            mujoco.set_mjcb_control(controller(model, data, np.pi/2, np.pi/2))\n",
+    "            mujoco.mj_step(model, data)            \n",
     "\n",
     "        if (data.time >= SIMEND):\n",
     "            break\n",
@@ -128,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us change controller "
+    "And now let us take a look at an example how we can implement the same task, but with torque controlled actuators "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,24 +150,29 @@
     "        model.actuator_gainprm[actuator_no, 0] = 1\n",
     "\n",
     "\n",
-    "def controller(model, data):\n",
+    "def controller(model, mjdata, q_A: float, q_B: float):\n",
+    "    ID_JOINT_A = 0\n",
+    "    ID_JOINT_B = 1\n",
+    "    TAU_ID_A = 0\n",
+    "    TAU_ID_B = 3\n",
+    "    KP = 100\n",
+    "    KD = 10\n",
     "\n",
-    "    # torque control\n",
     "    set_torque_servo(0, 1)\n",
-    "    data.ctrl[0] = 100*(np.pi/2-data.qpos[0]) + 10*(0.5-data.qvel[0])\n",
-    "    data.ctrl[3] = 100*(np.pi/2-data.qpos[1]) + 10*(0.5-data.qvel[1])"
+    "    mjdata.ctrl[TAU_ID_A] = KP*(q_A-mjdata.qpos[ID_JOINT_A]) + KD*(0-mjdata.qvel[ID_JOINT_A])\n",
+    "    mjdata.ctrl[TAU_ID_B] = KP*(q_B-mjdata.qpos[ID_JOINT_B]) + KD*(0-mjdata.qvel[ID_JOINT_B])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sim"
+    "Create a viewer entity, set control callback, and write a piece of code for the `mj_step` command"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,22 +181,27 @@
     "                                    width=1920,\n",
     "                                    height=1080)\n",
     "\n",
-    "mujoco.set_mjcb_control(controller)\n",
-    "\n",
     "for i in range(STEP_NUM):\n",
     "    if viewer.is_alive:\n",
     "        time_prev = data.time\n",
     "        while (data.time - time_prev < 1.0/60.0):\n",
+    "            mujoco.set_mjcb_control(controller(model, data, np.pi/2, np.pi/2))\n",
     "            mujoco.mj_step(model, data)\n",
-    "\n",
+    "            \n",
     "        if (data.time >= SIMEND):\n",
     "            break\n",
-    "        # mujoco.mj_step(model, data)\n",
     "        viewer.render()\n",
     "    else:\n",
     "        break\n",
     "\n",
     "viewer.close()    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to change `KP` and `KD`. Also you can change the position reference as extra activity. "
    ]
   }
  ],
