leg example fix

--- a/practice_3/step_1/leg_sim.ipynb
+++ b/practice_3/step_1/leg_sim.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,20 @@
     "        model.actuator_gainprm[actuator_no, 0] = 1\n",
     "\n",
     "\n",
-    "def controller(model, mjdata, q_A: float, q_B: float):\n",
-    "    ID_JOINT_A = 0\n",
-    "    ID_JOINT_B = 1\n",
+    "def controller(model, mjdata, qA: float, qB: float, dqA, dqB):\n",
+    "    ID_JOINT_A = 1\n",
+    "    ID_JOINT_B = 2\n",
     "    TAU_ID_A = 0\n",
     "    TAU_ID_B = 1\n",
-    "    KP = 0\n",
-    "    KD = 0\n",
+    "    KP = 100\n",
+    "    KD = 1\n",
     "\n",
     "    set_torque_servo(0, 1)\n",
-    "    mjdata.ctrl[TAU_ID_A] = KP*(q_A-mjdata.qpos[ID_JOINT_A]) + KD*(0-mjdata.qvel[ID_JOINT_A])\n",
-    "    mjdata.ctrl[TAU_ID_B] = KP*(q_B-mjdata.qpos[ID_JOINT_B]) + KD*(0-mjdata.qvel[ID_JOINT_B])\n",
+    "    mjdata.ctrl[TAU_ID_A] = KP*(qA-mjdata.qpos[ID_JOINT_A]) + KD*(dqA-mjdata.qvel[ID_JOINT_A])\n",
+    "    mjdata.ctrl[TAU_ID_B] = KP*(qB-mjdata.qpos[ID_JOINT_B]) + KD*(dqB-mjdata.qvel[ID_JOINT_B])\n",
     "\n",
     "SIMEND = 10\n",
-    "TIMESTEP = 0.005\n",
+    "TIMESTEP = 0.0005\n",
     "STEP_NUM = int(SIMEND/TIMESTEP)\n",
     "MODEL_NAME = 'open_chain_leg_scene.xml'\n",
     "\n",
@@ -58,12 +58,12 @@
     "data = mujoco.MjData(model)\n",
     "\n",
     "# set reference\n",
-    "i = 0\n",
-    "time = 0\n",
     "tt = np.linspace(0, SIMEND, STEP_NUM)\n",
-    "freq = 1\n",
-    "ref = [np.pi/12 * np.sin(freq * tt) + np.pi/4,\n",
-    "       -np.pi/6 * np.sin(freq * tt) - np.pi/2]\n",
+    "freq = 5\n",
+    "ref = [np.pi/12 * np.sin(2*np.pi*freq * tt) + np.pi/4,\n",
+    "       -np.pi/6 * np.sin(2*np.pi*freq * tt) - np.pi/2]\n",
+    "ref_vel = [np.pi/12 * 2*np.pi*freq * np.cos(2*np.pi*freq * tt),\n",
+    "           -np.pi/6 * 2*np.pi*freq * np.cos(2*np.pi*freq * tt)]\n",
     "\n",
     "x_ee_all = []\n",
     "z_ee_all = []\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,14 @@
     "\n",
     "for i in range(STEP_NUM):\n",
     "    if viewer.is_alive:\n",
-    "        # time_prev = data.time\n",
-    "        # while (data.time - time_prev < 1.0/60.0):\n",
-    "        mujoco.set_mjcb_control(controller(model, data, ref[0][i], ref[1][i]))\n",
+    "        mujoco.set_mjcb_control(controller(model, data,\n",
+    "                   ref[0][i], ref[1][i],\n",
+    "                   ref_vel[0][i], ref_vel[1][i]))\n",
     "        mujoco.mj_step(model, data)\n",
+    "        \n",
     "        viewer.render()\n",
+    "    \n",
     "    else:\n",
-    "        print(\"pam pam\", i)\n",
     "        break\n",
     "\n",
     "viewer.close()"
